animation delay time fixed. Image opacity and z-index set to 0.4 and -999.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -12,6 +12,20 @@
     100% {
         opacity: 1;
         }
+  
+    
+}
+@keyframes landingPageAnimationText {
+    100% {
+        opacity: 1;
+        }
+    50% {
+        opacity: 0.5;
+        }
+    0% {
+        opacity: 0;
+        }
+    
 }
 
 body {
@@ -128,7 +142,7 @@ main {
     align-items: center;
     justify-content: center;
     z-index: 999;
-    top: 40%;
+    top: 20%;
     left: 40%;
    
 
@@ -136,28 +150,36 @@ main {
 
 .home-presentation-card {
     opacity: 0;
-    animation: landingPageAnimation 6s ease-in forwards;
-    animation-duration: 900ms;
+    animation: landingPageAnimation 3s ease forwards;
+    animation-delay: 2s;
+    animation-duration: 1200ms;
    
    
 }
 
 .lucas-img {
-    width: 130px;
-    height: 130px;
+    width: 200px;
+    height: 200px;
     margin: 1rem 0 0.25rem;
     opacity: 0;
-    animation: landingPageAnimation 2s ease forwards;
-    animation-duration: 700ms;
+    animation: landingPageAnimation 3s ease forwards;
+    animation-delay: 0.5s;
+    animation-duration: 1200ms;
+    border-radius: 50%;
+    outline: 3px solid transparent;
+    outline-color: var(--bg-secondary);
+    color: white;
 
 }
 
 .landing-page-img {
     margin: 0;
+    height: fit-content;
     width: 100%;
     object-fit: contain;
     opacity: 0.4;
     z-index: -999;
+    border: transparent;
  
 }
 
